Fix overlapping images in compendium browser (#12830)

--- a/src/styles/packs/_tab.scss
+++ b/src/styles/packs/_tab.scss
@@ -135,7 +135,7 @@
             > * {
                 align-items: center;
                 display: flex;
-                height: 2rem;
+                min-height: 2rem;
                 justify-content: center;
             }
 
@@ -147,6 +147,11 @@
                 gap: 0.25em;
                 flex-basis: 6ch;
                 justify-content: start;
+            }
+
+            > .tags {
+                padding: 0.25em 0.05em;
+                margin-bottom: 0;
             }
 
             > .level {
